fix wrong assert causing streaming to crash

This regression was introduced by commit
18d3876b78c7f19c577da000d322dbd44e63e456
("UpgradeItem: use base PipeItem for refcounting")

This fix https://bugs.freedesktop.org/show_bug.cgi?id=95365.

Signed-off-by: Frediano Ziglio <fziglio@redhat.com>
Acked-by: Christophe Fergeau <cfergeau@redhat.com>